# deepseek-code-assistant

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: architecture.md  llm_architect_prompt.md
examples/: __init__.py  engine_demo.py  feature_implementation.py  integration_test.py  learning_demo.py  validation_demo.py
scripts/: debug_env.py  test_imports.py
src/: __init__.py
src/api/: client.py
src/assistant/: __init__.py
src/assistant/api/: __init__.py  client.py
src/assistant/cli/: main.py
src/assistant/core/: __init__.py  context_manager.py  file_loader.py  focused_validator.py  learning_engine.py  programmatic_api.py  reasoning_engine.py  reasoning_models.py  snapshot_loader.py
src/assistant/integrations/: __init__.py  chat_integration.py  git.py
src/assistant/ui/: __init__.py  chat_cli.py
src/cli/: __init__.py  main.py
src/shared/: __init__.py  git_operations.py
src/snapshotter/: __init__.py  graph.py  pass2_semantic.py  validate_basic.py
